updated link to us states json data (still cdn style)

--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
 
    <!-- include the us satates data 
         && provides the var statesData = json {} -->
-   <script src="http://leafletjs.com/examples/us-states.js"></script>
 
+   <!-- OLD <script src="http://leafletjs.com/examples/us-states.js"></script>-->
+   <!-- NEW: http://leafletjs.com/examples/choropleth/us-states.js -->
+   <script src="http://leafletjs.com/examples/choropleth/us-states.js"></script>
+  
    <script>
      (function(){
 
